# Operating-systems

./: README.md
Colloquium 2/: CMakeLists.txt  README.md
Colloquium 2/include/singleton/: creation_policies.hpp  lifetime_policies.hpp  singleton.hpp  threading_models.hpp
Colloquium 2/src/: example.cpp
Colloquium 3/: README.md
Colloquium 3/src/: command.cpp  strategy.cpp  template_method.cpp
Lab/Lab 1/: CMakeLists.txt
Lab/Lab 1/include/: functions.h
Lab/Lab 1/src/: functions.cpp  main.cpp
Lab/Lab 1/tests/: tests.cpp
Lab/Lab 2/: CMakeLists.txt
Lab/Lab 2/src/: child.cpp  count.cpp  parent.cpp
Lab/Lab 2/tests/: test_main.cpp
Lab/Lab 3/: CMakeLists.txt
Lab/Lab 3/src/: main.cpp
Lab/Lab 3/tests/: tests.cpp
Lab/Lab 4/: CMakeLists.txt
Lab/Lab 4/src/: child.cpp  parent.cpp
Lab/Lab 4/tests/: tests.cpp
Lab/Lab 5/: CMakeLists.txt
Lab/Lab 5/src/: main.cpp  simple.cpp
Lab/Lab 5/tests/: test.cpp
Lab/Lab 6/: CMakeLists.txt
Lab/Lab 6/include/: utils.h
Lab/Lab 6/src/: main.cpp  utils.cpp
Lab/Lab 6/tests/: test.cpp
Lab/Lab 7/src/: Lab7.java
microColloquium/: .gitignore  CMakeLists.txt  README.md
microColloquium/src/: filesystem.hpp
microColloquium/test/: e2e_tests.cpp  unit_tests.cpp
src/: main.cpp
tests/: tests.cpp
Сolloquium/: General questions.md  zero group of questions.md
